Scoring is done.

--- a/Layouts/End.xml
+++ b/Layouts/End.xml
@@ -137,6 +137,33 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="final" uid="56">
+                    <properties>
+                        <text>FINAL SCORE</text>
+                        <initial-visibility>Visible</initial-visibility>
+                        <font>Arial,-27,400,0</font>
+                        <color>0,0,0</color>
+                        <horizontal-alignment>Center</horizontal-alignment>
+                        <vertical-alignment>Top</vertical-alignment>
+                        <hotspot>Center</hotspot>
+                        <wrapping>Word</wrapping>
+                        <line-height>0</line-height>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>320</x>
+                        <y>271.554779053</y>
+                        <z>0</z>
+                        <width>190.983612061</width>
+                        <height>39.766876221</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
