Time out ending added.

--- a/Layouts/End.xml
+++ b/Layouts/End.xml
@@ -41,13 +41,16 @@
                         <wrapping>Word</wrapping>
                         <line-height>0</line-height>
                     </properties>
+                    <behavior-instances>
+                        <behavior-instance type="Flash" />
+                    </behavior-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
                         <x>320</x>
-                        <y>50.61523056</y>
+                        <y>50.615234375</y>
                         <z>0</z>
-                        <width>71.524688721</width>
+                        <width>196.242889404</width>
                         <height>30</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
