Cheeky last submit - some graphics and removing debug keys!

--- a/Layouts/Level1.xml
+++ b/Layouts/Level1.xml
@@ -495,7 +495,7 @@
                 <instance type="exit" uid="47">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
-                        <initial-animation>Default</initial-animation>
+                        <initial-animation>closed</initial-animation>
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
